--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@playwright/test": "^1.50.1",
     "@types/node": "^22.13.5",
     "dotenv": "^16.4.7"
+  },
+  "dependencies": {
+    "playwright": "^1.50.1"
   }
 }
